--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>五子棋</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="img/gobang.ico" rel="shortcut icon">
 </head>
 <body>
 	<canvas id="chess" width="450px" height="450px"></canvas>	
